--- a/page 3 obama good.html
+++ b/page 3 obama good.html
@@ -1,2 +1,9 @@
 <!DOCTYPE html>
+<title> Obama :flushed:</title>
+<head>
+<link rel="stylesheet" href="stlyyy.css">
+</head>
+<body>
 <h1> good </h1>
+<img width="500" height="500" src="downloa2d.jpg" title="call off the black bag squad">
+</body>
