--- a/Page 2 (I cant let you do that).html
+++ b/Page 2 (I cant let you do that).html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <title> What have you done</title>
     <head>
-    <style> 
-         <body> {
-  background-image:url(img_girl.jpg);
-}
-</style>
-        </head>
-<img src="1ghw0s.jpg" title= "dont tell michelle">
+    <link rel="stylesheet" href="mewhen.css">
+    </head>
+<br>
+    <audio controls autoplay>
+    <source src="five-nights-at-freddys-full-scream-sound_2.mp3" type="audio/mpeg">
+    </audio>
+    <br>
+    <body>
 <strong><h1> I cant let you do that</h1></strong>
+        <img src="1ghw0s.jpg" title= "dont tell michelle">
     </body>
 </html>
