--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img width="500" height="350" src="gettyimages-634187228.jpg" title="where is my super suit">
     <br>
     <h3> Would you like to become President of the United States?</h3>
-     <button class="button1"> <a href="Page%202%20(I%20cant%20let%20you%20do%20that).html"><h4> Yes</h4></a></button>
+     <button class="button1"> <a href="page%202%20i%20cant%20let%20you%20do%20that.html"><h4> Yes</h4></a></button>
     <button class="button1"> <a href=page%203%20obama%20good.html><h4> No </h4></a></button>
     <hr>
     <p><a href="https://en.wikipedia.org/wiki/Barack_Obama" target="_blank">Learn More About Me HERE</a></p>
