Update page 2 i cant let you do that.html

--- a/page 2 i cant let you do that.html
+++ b/page 2 i cant let you do that.html
@@ -4,8 +4,9 @@
     <head>
     <link rel="stylesheet" href="mewhen.css">
     </head>
+    <h8> (warning loud)</h8>
 <br>
-    <audio controls autoplay>
+    <audio controls>
     <source src="five-nights-at-freddys-full-scream-sound_2.mp3" type="audio/mpeg">
     </audio>
     <br>
