--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
     <link rel="stylesheet" href="stylicious.css">
-<title>Obama Kinnie Club</title>
+<img width="250" height="250" src="obamakinnieclub.png" title="obama-desu">
 </head>
 <div class="header">
     <strong><h3>Barrack Obama Fanclub</h3></strong>
