--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head> 
     <link rel="stylesheet" href="stylicious.css">
-<img width="250" height="250" src="obamakinnieclub.png" title="obama-desu">
+    <title> Obama Kinnie Club </title>
 </head>
 <div class="header">
-    <strong><h3>Barrack Obama Fanclub</h3></strong>
-    <h5>My fellow americans</h5> 
+    <img width="250" height="250" src="obamakinnieclub.png" title="obama-desu">
     </div>
  <body>
      <br>
