Update page 2 i cant let you do that.html

--- a/page 2 i cant let you do that.html
+++ b/page 2 i cant let you do that.html
@@ -12,7 +12,7 @@
     </audio>
     <br>
     <body>
-<strong><h1> I cant let you do that</h1></strong>
+<strong><h1> I can't let you do that</h1></strong>
         <img src="1ghw0s.jpg" title= "dont tell michelle">
     </body>
 </html>
